<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Internations events</string>
    <string name="title_future">Upcoming events</string>
    <string name="title_subscribed">Subscribed events</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="menu_home">Internations home</string>
    <string name="menu_messages">My messages</string>
    <string name="menu_refreshmy">Refresh My events</string>
    <string name="menu_refreshall">Refresh All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
